--- a/actions/smart-release-please/action.yaml
+++ b/actions/smart-release-please/action.yaml
@@ -61,8 +61,7 @@ runs:
         ${{ 
           steps.calc_rc.outputs.next_version != '' &&
           !contains(github.event.head_commit.message, 'Release-As:') &&
-          ! (startsWith(github.event.head_commit.message, 'chore(') && contains(github.event.head_commit.message, '): release')) &&
-          ! (contains(github.event.head_commit.message, 'Merge branch') && contains(github.event.head_commit.message, 'main'))
+          ! (startsWith(github.event.head_commit.message, 'chore(') && contains(github.event.head_commit.message, '): release'))
         }}
       shell: bash
       run: |
