--- a/actions/smart-release-please/action.yaml
+++ b/actions/smart-release-please/action.yaml
@@ -20,52 +20,71 @@ runs:
       with:
         python-version: '3.14'
 
-    - name: Calculate Correct RC Version
-      id: calc_rc
+    - name: Check if Last Commit is Manifest Reset
+      id: check_reset
       shell: bash
-      run: python3 "${{ github.action_path }}/rc_align.py"
+      run: |
+        LAST_MSG=$(git log -1 --pretty=%s)
+        if [[ "$LAST_MSG" == *"chore: reset manifest to stable version"* ]]; then
+          echo "manifest_was_reset=true" >> $GITHUB_OUTPUT
+          echo "INFO: Last commit was manifest reset. Will proceed to release."
+        else
+          echo "manifest_was_reset=false" >> $GITHUB_OUTPUT
+        fi
 
-    - name: Fix Manifest for Main Branch
-      if: github.ref_name == 'main' || github.ref_name == 'master'
+    - name: Fix Manifest for Main Branch (First Run Only)
+      if: |
+        (github.ref_name == 'main' || github.ref_name == 'master') &&
+        steps.check_reset.outputs.manifest_was_reset != 'true'
       shell: bash
       run: |
         # Configure Git
         git config user.name "mapcolonies[bot]"
         git config user.email "devops[bot]@mapcolonies.com"
         
-        # Check if manifest reset was already done (to avoid loops)
-        LAST_MSG=$(git log -1 --pretty=%s)
-        if [[ "$LAST_MSG" == *"chore: reset manifest to stable version"* ]]; then
-          echo "Manifest already reset. Skipping."
-          exit 0
-        fi
+        # Fetch all tags to see latest
+        git fetch --tags
         
         # On main, find the last stable release and update manifest
         LAST_STABLE=$(git tag -l "v[0-9]*.[0-9]*.[0-9]" --sort=-creatordate | head -n1 | sed 's/^v//')
         
-        if [ -n "$LAST_STABLE" ]; then
-          echo "Setting manifest to last stable release: $LAST_STABLE"
-          echo "{\".\": \"$LAST_STABLE\"}" > .release-please-manifest.json
-        else
-          echo "No stable release found, using calculated version"
-          TARGET_VER="${{ steps.calc_rc.outputs.next_version }}"
-          echo "{\".\": \"$TARGET_VER\"}" > .release-please-manifest.json
+        if [ -z "$LAST_STABLE" ]; then
+          # No stable release yet, check for RC tags
+          LAST_RC=$(git tag -l "v[0-9]*.[0-9]*.[0-9]*-rc.*" --sort=-creatordate | head -n1)
+          if [ -n "$LAST_RC" ]; then
+            # Strip RC suffix to get target stable version
+            LAST_STABLE=$(echo "$LAST_RC" | sed 's/-rc.*//' | sed 's/^v//')
+            echo "No stable release found. Promoting RC $LAST_RC to $LAST_STABLE"
+          else
+            LAST_STABLE="0.1.0"
+            echo "No tags found at all. Defaulting to $LAST_STABLE"
+          fi
         fi
+        
+        echo "Setting manifest to: $LAST_STABLE"
+        echo "{\".\": \"$LAST_STABLE\"}" > .release-please-manifest.json
         
         git add .release-please-manifest.json
         
         # Only commit if there are changes
         if ! git diff --staged --quiet; then
           git commit -m "chore: reset manifest to stable version"
-          
-          # Push using the PAT token explicitly
           git push "https://x-access-token:${{ inputs.token }}@github.com/${{ github.repository }}.git" HEAD:${{ github.ref_name }}
           
-          # Set flag to skip release-please on this run (it will run on the next trigger)
-          echo "SKIP_RELEASE=true" >> $GITHUB_ENV
+          echo "✅ Manifest committed and pushed. Workflow will retrigger."
+          exit 0
         else
-          echo "No changes to manifest, skipping commit"
+          echo "No changes to manifest."
         fi
+
+    - name: Calculate Correct RC Version
+      # Only run if we're past the manifest reset (or not on main)
+      if: |
+        steps.check_reset.outputs.manifest_was_reset == 'true' ||
+        (github.ref_name != 'main' && github.ref_name != 'master')
+      id: calc_rc
+      shell: bash
+      run: python3 "${{ github.action_path }}/rc_align.py"
 
     - name: Inject Release-As Footer
       if: >-
@@ -97,7 +116,6 @@ runs:
         echo "SKIP_RELEASE=true" >> $GITHUB_ENV
 
     - name: Close Stale Release PRs
-      # Only run if we are NOT skipping (meaning we are ready to run release-please)
       if: env.SKIP_RELEASE != 'true' && ${{ !contains(github.ref, 'release-please--branches') }}
       shell: bash
       env:
