fix: add pull_request trigger for main branch

--- a/.github/workflows/rc-alignment-demo.yaml
+++ b/.github/workflows/rc-alignment-demo.yaml
@@ -5,6 +5,9 @@ on:
     branches:
       - next
       - main
+  pull_request:
+    branches:
+      - main
 
 concurrency:
   group: smart-release-please-${{ github.ref }}
