fix: comment out push trigger for next and main branches

--- a/.github/workflows/rc-alignment-demo.yaml
+++ b/.github/workflows/rc-alignment-demo.yaml
@@ -1,10 +1,10 @@
 name: RC Alignment Demo
 
 on:
-  push:
-    branches:
-      - next
-      - main
+  # push:
+  #   branches:
+  #     - next
+  #     - main
   pull_request:
     branches:
       - main
