Add pull_request trigger to workflow

--- a/.github/workflows/rc-alignment-demo.yaml
+++ b/.github/workflows/rc-alignment-demo.yaml
@@ -5,7 +5,10 @@ on:
     branches:
       - next
       - main
-
+  pull_request:
+    branches:
+      - main
+      
 concurrency:
   group: smart-release-please-${{ github.ref }}
   cancel-in-progress: false  # false to queue, not cancel
