fix: update workflow trigger to use pull_request instead of push

--- a/.github/workflows/rc-alignment-demo.yaml
+++ b/.github/workflows/rc-alignment-demo.yaml
@@ -1,12 +1,9 @@
 name: RC Alignment Demo
 
 on:
-  # push:
-  #   branches:
-  #     - next
-  #     - main
-  pull_request:
+  push:
     branches:
+      - next
       - main
 
 concurrency:
