fix: reset manifest to stable version after release on main branch

--- a/actions/smart-release-please/action.yaml
+++ b/actions/smart-release-please/action.yaml
@@ -26,36 +26,6 @@ runs:
       shell: bash
       run: python3 "${{ github.action_path }}/rc_align.py"
 
-    - name: Fix Manifest for Main Branch
-      if: github.ref_name == 'main' || github.ref_name == 'master'
-      shell: bash
-      run: |
-        # Configure Git
-        git config user.name "mapcolonies[bot]"
-        git config user.email "devops[bot]@mapcolonies.com"
-        
-        # On main, find the last stable release and update manifest
-        LAST_STABLE=$(git tag -l "v[0-9]*.[0-9]*.[0-9]" --sort=-creatordate | head -n1 | sed 's/^v//')
-        
-        if [ -n "$LAST_STABLE" ]; then
-          echo "Setting manifest to last stable release: $LAST_STABLE"
-          echo "{\".\": \"$LAST_STABLE\"}" > .release-please-manifest.json
-        else
-          echo "No stable release found, using calculated version"
-          TARGET_VER="${{ steps.calc_rc.outputs.next_version }}"
-          echo "{\".\": \"$TARGET_VER\"}" > .release-please-manifest.json
-        fi
-        
-        git add .release-please-manifest.json
-        
-        # Only commit if there are changes
-        if ! git diff --staged --quiet; then
-          git commit -m "chore: reset manifest to stable version"
-          git push "https://x-access-token:${{ inputs.token }}@github.com/${{ github.repository }}.git" ${{ github.ref_name }}
-        else
-          echo "No changes to manifest, skipping commit"
-        fi
-
     - name: Inject Release-As Footer
       if: >-
         ${{ 
@@ -121,3 +91,29 @@ runs:
         token: ${{ inputs.token }}
         target-branch: ${{ github.ref_name }}
         config-file: release-please-config.${{ github.ref_name }}.json
+
+    - name: Reset Manifest After Release
+      if: (github.ref_name == 'main' || github.ref_name == 'master') && env.SKIP_RELEASE != 'true'
+      shell: bash
+      run: |
+        # Configure Git
+        git config user.name "mapcolonies[bot]"
+        git config user.email "devops[bot]@mapcolonies.com"
+        
+        # After release, reset manifest to the stable version that was just released
+        TARGET_VER="${{ steps.calc_rc.outputs.next_version }}"
+        
+        if [ -n "$TARGET_VER" ]; then
+          echo "Resetting manifest to stable version: $TARGET_VER"
+          echo "{\".\": \"$TARGET_VER\"}" > .release-please-manifest.json
+          
+          git add .release-please-manifest.json
+          
+          # Only commit if there are changes
+          if ! git diff --staged --quiet; then
+            git commit -m "chore: reset manifest to stable version"
+            git push "https://x-access-token:${{ inputs.token }}@github.com/${{ github.repository }}.git" ${{ github.ref_name }}
+          else
+            echo "No changes to manifest, skipping commit"
+          fi
+        fi
