--- a/.github/workflows/sync-main-to-branch.yaml
+++ b/.github/workflows/sync-main-to-branch.yaml
@@ -2,10 +2,10 @@ name: Sync Main to Next (Hard Reset)
 description: "Forcefully resets 'next' to match 'main' after a release to ensure tags are synced and conflicts are ignored."
 
 on:
-  workflow_dispatch:
-  # # Trigger when a Release is published
-  # release:
-  #   types: [published]
+  # workflow_dispatch:
+  # Trigger when a Release is published
+  release:
+    types: [published]
 
 jobs:
   reset-next-to-main:
