feat: update action descriptions and improve git identity configuration

--- a/actions/smart-release-please/action.yaml
+++ b/actions/smart-release-please/action.yaml
@@ -1,16 +1,16 @@
 name: "Smart Release Please"
-description: "Handles RC calculation on next and Stable promotion on main."
+description: "Manages version control for RC releases on 'next' and stable releases on 'main'."
 
 inputs:
   token:
-    description: "GitHub Token (PAT)"
+    description: "GitHub Token (PAT) for authentication"
     required: false
     default: ${{ github.token }}
 
 runs:
   using: "composite"
   steps:
-    - name: Checkout
+    - name: Checkout Repository
       uses: actions/checkout@v6 
       with:
         fetch-depth: 0
@@ -21,12 +21,21 @@ runs:
       with:
         python-version: '3.14'
 
-    - name: Calculate Correct RC Version
+    - name: Configure Git Identity
+      shell: bash
+      run: |
+        git config user.name "mapcolonies[bot]"
+        git config user.email "devops[bot]@mapcolonies.com"
+
+    - name: Calculate Next Version
       id: calc_rc
       shell: bash
       run: python3 "${{ github.action_path }}/rc_align.py"
 
-    - name: Update Manifest for Main Branch
+    # ============================================================
+    # MAIN BRANCH ONLY: Update manifest for stable releases
+    # ============================================================
+    - name: Update Release Manifest (Main Branch)
       if: (github.ref_name == 'main' || github.ref_name == 'master') && steps.calc_rc.outputs.next_version != ''
       shell: bash
       run: |
@@ -34,52 +43,56 @@ runs:
         echo "Updating manifest to version: $TARGET_VER"
         echo "{\".\": \"$TARGET_VER\"}" > .release-please-manifest.json
         
-        git config user.name "mapcolonies[bot]"
-        git config user.email "devops[bot]@mapcolonies.com"
         git add .release-please-manifest.json
         
         if ! git diff --staged --quiet; then
           git commit -m "chore: update manifest to $TARGET_VER for stable release"
           git push "https://x-access-token:${{ inputs.token }}@github.com/${{ github.repository }}.git" ${{ github.ref_name }}
+        else
+          echo "No changes to manifest, skipping commit"
         fi
 
-    - name: Inject Release-As Footer
+    # ============================================================
+    # VERSION ENFORCEMENT: Add Release-As footer when needed
+    # Skip if: already has Release-As, is a release commit, or is a merge from main
+    # ============================================================
+    - name: Enforce Version with Release-As Footer
       if: >-
         ${{ 
           steps.calc_rc.outputs.next_version != '' &&
           !contains(github.event.head_commit.message, 'Release-As:') &&
-          ! (startsWith(github.event.head_commit.message, 'chore(') && contains(github.event.head_commit.message, '): release')) &&
-          ! (contains(github.event.head_commit.message, 'Merge branch') && contains(github.event.head_commit.message, 'main'))
+          !(startsWith(github.event.head_commit.message, 'chore(') && contains(github.event.head_commit.message, '): release')) &&
+          !(contains(github.event.head_commit.message, 'Merge branch') && contains(github.event.head_commit.message, 'main'))
         }}
       shell: bash
       run: |
-        # Configure Git
-        git config user.name "mapcolonies[bot]"
-        git config user.email "devops[bot]@mapcolonies.com"
-
-        # Check if footer exists (Loop Protection)
         TARGET_VER="${{ steps.calc_rc.outputs.next_version }}"
         LAST_MSG=$(git log -1 --pretty=%B)
         
+        # Prevent infinite loop: check if footer already exists
         if [[ "$LAST_MSG" == *"Release-As: $TARGET_VER"* ]]; then
-          echo "Footer already present. Skipping push."
+          echo "✓ Release-As footer already present, skipping"
           exit 0
         fi
 
-        # Commit & Push
+        # Add Release-As footer to guide release-please
+        echo "Injecting Release-As: $TARGET_VER footer"
         git commit --allow-empty -m "chore: enforce correct rc version" -m "Release-As: $TARGET_VER"
         git push "https://x-access-token:${{ inputs.token }}@github.com/${{ github.repository }}.git" ${{ github.ref_name }}
 
+        # Signal to skip release-please in this run (it will run on the next trigger)
         echo "SKIP_RELEASE=true" >> $GITHUB_ENV
 
+    # ============================================================
+    # CLEANUP: Close stale release PRs to force regeneration
+    # ============================================================
     - name: Close Stale Release PRs
-      # Only run if we are NOT skipping (meaning we are ready to run release-please)
-      if: env.SKIP_RELEASE != 'true' && ${{ !contains(github.ref, 'release-please--branches') }}
+      if: env.SKIP_RELEASE != 'true' && !contains(github.ref, 'release-please--branches')
       shell: bash
       env:
         GH_TOKEN: ${{ inputs.token }}
       run: |
-        echo "Checking for existing release PRs on branch ${{ github.ref_name }}..."
+        echo "Checking for stale release PRs on branch '${{ github.ref_name }}'..."
         
         PR_DATA=$(gh pr list \
           --base "${{ github.ref_name }}" \
@@ -87,21 +100,22 @@ runs:
           --json number,state \
           --jq '.[0]')
 
-        if [ -n "$PR_DATA" ] && [ "$PR_DATA" != "null" ]; then
-          PR_NUMBER=$(echo "$PR_DATA" | jq -r '.number')
-          PR_STATE=$(echo "$PR_DATA" | jq -r '.state')
-          
-          if [ "$PR_STATE" == "OPEN" ]; then
-            echo "Found open stale release PR #$PR_NUMBER. Closing it to force a fresh regeneration..."
-            gh pr close "$PR_NUMBER" --delete-branch
-          else
-            echo "Found release PR #$PR_NUMBER but it's already $PR_STATE. Skipping."
-          fi
-        else
-          echo "No open release PRs found."
+        if [ -z "$PR_DATA" ] || [ "$PR_DATA" == "null" ]; then
+          echo "✓ No open release PRs found"
+          exit 0
         fi
 
-    - name: Run release-please
+        PR_NUMBER=$(echo "$PR_DATA" | jq -r '.number')
+        PR_STATE=$(echo "$PR_DATA" | jq -r '.state')
+        
+        if [ "$PR_STATE" == "OPEN" ]; then
+          echo "Closing stale release PR #$PR_NUMBER to force regeneration..."
+          gh pr close "$PR_NUMBER" --delete-branch
+        else
+          echo "Found PR #$PR_NUMBER but it's already $PR_STATE, skipping"
+        fi
+
+    - name: Run Release Please
       if: env.SKIP_RELEASE != 'true'
       uses: googleapis/release-please-action@v4
       with:
