--- a/actions/smart-release-please/action.yaml
+++ b/actions/smart-release-please/action.yaml
@@ -27,6 +27,10 @@ runs:
         git config user.name "mapcolonies[bot]"
         git config user.email "devops[bot]@mapcolonies.com"
 
+    - name: Pull Latest Changes
+      shell: bash
+      run: git pull "https://x-access-token:${{ inputs.token }}@github.com/${{ github.repository }}.git" ${{ github.ref_name }}
+
     - name: Calculate Next Version
       id: calc_rc
       shell: bash
